[package]
name = "little-ir-to-x86"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
little-parser = { path = "../little-parser", version = "0.1" }
little-intermediate-representation = { path = "../little-intermediate-representation", version = "0.1" }